k8s-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: so-model-release-depl
  labels:
    app: so-model-release
spec:
  replicas: 2
  selector:
    matchLabels:
      app: so-model-release
  template:
    metadata:
      labels:
        app: so-model-release
    spec:
      containers:
      - name: so-model-release
        image: ghcr.io/remla22-group3/stackoverflow-tag-detection:0.0.4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: so-model-release-svc
spec:
  selector:
    app: so-model-release
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: so-model-shadow-depl
  labels:
    app: so-model-shadow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: so-model-shadow
  template:
    metadata:
      labels:
        app: so-model-shadow
    spec:
      containers:
      - name: so-model-shadow
        image: ghcr.io/remla22-group3/stackoverflow-tag-detection:0.0.5
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: so-model-shadow-svc
spec:
  selector:
    app: so-model-shadow
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: so-web-depl
  labels:
    app: so-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: so-web
  template:
    metadata:
      labels:
        app: so-web
    spec:
      containers:
      - name: so-web
        image: ghcr.io/remla22-group3/stackoverflow-web-app:0.0.5
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: so-web-svc
  labels:
    app: so-web-svc
spec:
  selector:
    app: so-web
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: so-web-svc
      port:
        number: 8080
